--- a/terrarium/index.html
+++ b/terrarium/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Welcome to my Virtual Terrarium</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="./script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <h1>this is a test</h1>
+    <h1>My Terrarium</h1>
     <div id="page">
         <div id="left-container" class="container">
             <div class="plant-holder">
@@ -54,6 +56,15 @@
             <div class="plant-holder">
                 <img class="plant" alt="plant" id="plant14" src="./images/plant14.png" />
             </div>
+        </div>
+        <div id="terrarium">
+            <div class="jar-top"></div>
+            <div class="jar-walls">
+                <div class="jar-glossy-long"></div>
+                <div class="jar-glossy-short"></div>
+            </div>
+            <div class="dirt"></div>
+            <div class="jar-bottom"></div>
         </div>
     </div>
 </body>
