--- a/terrarium/index.html
+++ b/terrarium/index.html
@@ -5,8 +5,8 @@
     <title>Welcome to my Virtual Terrarium</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script src="./script.js" defer></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="script.js" defer></script>
+    <meta name="viewport" content="width=600" />
 </head>
 <body>
     <h1>My Terrarium</h1>
